--- a/package.json
+++ b/package.json
@@ -52,21 +52,26 @@
     "@ant-design/pro-layout": "^4.10.13",
     "@antv/data-set": "^0.11.0",
     "antd": "^3.23.6",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.16",
+    "graphql-tag": "^2.10.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "omit.js": "^1.0.2",
     "path-to-regexp": "2.4.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
+    "react-apollo": "^3.1.5",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "redux": "^4.0.1",
     "umi": "^2.13.0",
     "umi-plugin-antd-theme": "^1.0.1",
+    "umi-plugin-apollo": "^0.0.18",
     "umi-plugin-pro-block": "^1.3.2",
     "umi-plugin-react": "^1.9.5",
     "umi-request": "^1.0.8"
